crates/ml2_mem/tests/ui/memstruct_missing_offset.stderr
error: field `body` is missing #[offset(N)]
  --> tests/ui/memstruct_missing_offset.rs:12:5
   |
12 |     body: u32,
   |     ^^^^
